config/envoy/sn-iouring.yaml
bootstrap_extensions:
    - name: envoy.extensions.network.socket_interface.default_socket_interface
      typed_config:
          "@type": type.googleapis.com/envoy.extensions.network.socket_interface.v3.DefaultSocketInterface
          io_uring_options:
              io_uring_size: 10000
default_socket_interface: "envoy.extensions.network.socket_interface.default_socket_interface"
static_resources:
    listeners:
        - name: listener_0
          address:
              socket_address:
                  # Entrypoint for service through Envoy
                  address: 0.0.0.0
                  port_value: 9999
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          http_filters:
                              - name: envoy.filters.http.JwtAuthentication
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                                    providers:
                                        jwt_provider1:
                                            issuer: beeline
                                            local_jwks:
                                                inline_string: >-
                                                    {"keys": [
                                                      {"kty":"oct",
                                                      "k": "dGVzdHRlc3QxMjM0NTY3OA==",
                                                      "alg":"HS256"}]}
                                    rules:
                                        - match:
                                              prefix: "/"
                                          requires:
                                              provider_name: jwt_provider1
                              - name: envoy.filters.http.router
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                          codec_type: auto
                          stat_prefix: ingress_http
                          route_config:
                              virtual_hosts:
                                  - name: service
                                    domains:
                                        - "*"
                                    routes:
                                        - match:
                                              prefix: "/compose-post-service"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: compose-post-service
                                        - match:
                                              prefix: "/compose-post-redis"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: compose-post-redis
                                        - match:
                                              prefix: "/write-home-timeline-service"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: write-home-timeline-service
                                        - match:
                                              prefix: "/media-service"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: media-service
                                        - match:
                                              prefix: "/post-storage-service"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: post-storage-service
                                        - match:
                                              prefix: "/social-graph-service"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: social-graph-service
                                        - match:
                                              prefix: "/social-graph-mongodb"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: social-graph-mongodb
                                        - match:
                                              prefix: "/social-graph-redis"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: social-graph-redis
                                        - match:
                                              prefix: "/text-service"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: text-service
                                        - match:
                                              prefix: "/unique-id-service"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: unique-id-service
                                        - match:
                                              prefix: "/url-shorten-service"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: url-shorten-service
                                        - match:
                                              prefix: "/url-shorten-memcached"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: url-shorten-memcached
                                        - match:
                                              prefix: "/user-mention-service"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: user-mention-service
                                        - match:
                                              prefix: "/user-service"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: user-service
                                        - match:
                                              prefix: "/user-mongodb"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: user-mongodb
                                        - match:
                                              prefix: "/user-memcached"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: user-memcached
                                        - match:
                                              prefix: "/user-timeline-service"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: user-timeline-service
                                        - match:
                                              prefix: "/user-timeline-mongodb"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: user-timeline-mongodb
                                        - match:
                                              prefix: "/user-timeline-redis"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: user-timeline-redis
                                        - match:
                                              prefix: "/home-timeline-service"
                                          request_headers_to_add:
                                              - header:
                                                    key: "X-Processed-By"
                                                    value: "beeline"
                                                append: false
                                          route:
                                              cluster: home-timeline-service
    clusters:
        - name: compose-post-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: compose-post-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.9
                                      port_value: 9999

        - name: compose-post-redis
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: compose-post-redis
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.8
                                      port_value: 6379

        - name: write-home-timeline-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: write-home-timeline-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.6
                                      port_value: 9999

        - name: media-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: media-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.27
                                      port_value: 9999

        - name: post-storage-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: post-storage-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.11
                                      port_value: 9999

        - name: social-graph-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: social-graph-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.2
                                      port_value: 9999
        - name: social-graph-mongodb
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: social-graph-mongodb
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.4
                                      port_value: 27017

        - name: social-graph-redis
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: social-graph-redis
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.5
                                      port_value: 6379

        - name: text-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: text-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.31
                                      port_value: 9999

        - name: unique-id-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: unique-id-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.33
                                      port_value: 9999

        - name: url-shorten-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: url-shorten-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.19
                                      port_value: 9999

        - name: url-shorten-memcached
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: url-shorten-memcached
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.21
                                      port_value: 11211

        - name: user-mention-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: user-mention-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.35
                                      port_value: 9999

        - name: user-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: user-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.23
                                      port_value: 9999

        - name: user-mongodb
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: user-mongodb
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.26
                                      port_value: 27017

        - name: user-memcached
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: user-memcached
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.25
                                      port_value: 11211

        - name: user-timeline-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: user-timeline-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.15
                                      port_value: 9999

        - name: user-timeline-mongodb
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: user-timeline-mongodb
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.18
                                      port_value: 27017

        - name: user-timeline-redis
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: user-timeline-redis
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.17
                                      port_value: 6379

        - name: home-timeline-service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000
                  - priority: HIGH
                    max_connections: 1000000000
                    max_pending_requests: 1000000000
                    max_requests: 1000000000
                    max_retries: 1000000000

          load_assignment:
              cluster_name: home-timeline-service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 172.18.0.6
                                      port_value: 9999
